--- a/src/UI/Http/Web/Templates/Swagger/index.html.twig
+++ b/src/UI/Http/Web/Templates/Swagger/index.html.twig
@@ -1,76 +1,74 @@
-<!-- HTML for dev server -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>API</title>
-    {% block stylesheet %}
+    <title>{% block title %}Swagger API challange{% endblock %}</title>
+    {% block stylesheets %}
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.2/css/bulma.min.css">
         <link rel="stylesheet" href="{{ asset('swagger-ui/swagger-ui.css') }}">
     {% endblock %}
-    <link rel="icon" type="image/x-icon" href="{{ asset('swagger-ui/favicon-32x32.ico') }}" sizes="32x32" />
-    <link rel="icon" type="image/x-icon" href="{{ asset('swagger-ui/favicon-16x16.ico') }}" sizes="16x16" />
-    <style>
-        html
-        {
-            box-sizing: border-box;
-            overflow: -moz-scrollbars-vertical;
-            overflow-y: scroll;
-        }
+    {% block js %}
+        <script src="{{ asset('swagger-ui/swagger-ui-standalone-preset.js') }}"></script>
+        <script src="{{ asset('swagger-ui/swagger-ui-bundle.js') }}"></script>
+        <script>
+            window.onload = function() {
+                const ui = SwaggerUIBundle({
+                    url: "{{ asset('swagger-ui/swagger.json') }}",
+                    dom_id: '#swagger-ui',
+                    presets: [
+                        SwaggerUIBundle.presets.apis,
+                        SwaggerUIStandalonePreset
+                    ],
+                    plugins: [
+                        SwaggerUIBundle.plugins.DownloadUrl
+                    ],
+                    layout: "StandaloneLayout"
+                })
+    
+                window.ui = ui
+    
+                ui.initOAuth({
+                    clientId: "your-client-id",
+                    clientSecret: "your-client-secret-if-required",
+                    realm: "your-realms",
+                    appName: "your-app-name",
+                    scopeSeparator: " ",
+                    scopes: "openid profile email phone address",
+                    additionalQueryStringParams: {},
+                    usePkceWithAuthorizationCodeGrant: false
+                })
+            }
+        </script>
+    {% endblock %}
 
-        *,
-        *:before,
-        *:after
-        {
-            box-sizing: inherit;
-        }
-
-        body
-        {
-            margin:0;
-            background: #fafafa;
-        }
-    </style>
 </head>
-
 <body>
-<div id="swagger-ui"></div>
-
-{% block javascript %}
-<script src="{{ asset('swagger-ui/swagger-ui-standalone-preset.js') }}"></script>
-<script src="{{ asset('swagger-ui/swagger-ui-bundle.js') }}"></script>
-<script>
-    window.onload = function() {
-        const ui = SwaggerUIBundle({
-            url: "{{ asset('swagger-ui/swagger.json') }}",
-            dom_id: '#swagger-ui',
-            presets: [
-                SwaggerUIBundle.presets.apis,
-                SwaggerUIStandalonePreset
-            ],
-            plugins: [
-                SwaggerUIBundle.plugins.DownloadUrl
-            ],
-            layout: "StandaloneLayout"
-        })
-
-        window.ui = ui
-
-        ui.initOAuth({
-            clientId: "your-client-id",
-            clientSecret: "your-client-secret-if-required",
-            realm: "your-realms",
-            appName: "your-app-name",
-            scopeSeparator: " ",
-            scopes: "openid profile email phone address",
-            additionalQueryStringParams: {},
-            usePkceWithAuthorizationCodeGrant: false
-        })
-    }
-</script>
-{% endblock %}
-
-
+    <div style="position: static">
+        {% include 'Shared/Components/Header/menu.html.twig' with {
+            'config': {
+                'navbarNotFixed': true
+            }
+        }%}
+    </div>
+    <div id="swagger-ui"></div>
+    {% block javascripts %}{% endblock %}
+    <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            // Get all "navbar-burger" elements
+            var $navbarBurgers = Array.prototype.slice.call(document.querySelectorAll('.navbar-burger'), 0);
+            // Check if there are any navbar burgers
+            if ($navbarBurgers.length > 0) {
+                // Add a click event on each of them
+                $navbarBurgers.forEach(function ($el) {
+                    $el.addEventListener('click', function () {
+                        var $target = document.getElementById($el.dataset.target);
+                        // Toggle the class on both the "navbar-burger" and the "navbar-menu"
+                        $el.classList.toggle('is-active');
+                        $target.classList.toggle('is-active');
+                    });
+                });
+            }
+        });
+    </script>
 </body>
-
 </html>
