--- a/src/UI/Http/Web/Templates/Shared/Components/Header/menu.html.twig
+++ b/src/UI/Http/Web/Templates/Shared/Components/Header/menu.html.twig
@@ -1,7 +1,7 @@
 {%  if config is defined and config.navbarNotFixed is defined %}
-<nav class="navbar" style="box-shadow: 1px -4px 18px #ccc;">
+    <nav class="navbar" style="box-shadow: 1px -4px 18px #ccc;">
 {%  else %}
-<nav class="navbar is-fixed-top" style="box-shadow: 1px -4px 18px #ccc;">
+    <nav class="navbar is-fixed-top" style="box-shadow: 1px -4px 18px #ccc;">
 {%  endif %}
     <div class="navbar-brand">
         <a class="navbar-item" href="/">
@@ -18,12 +18,21 @@
             <div class="navbar-item">
                 {% if is_granted('ROLE_USER') %}
                     <span class="tag is-white">{{ app.user.username }}</span>
-                    <a class="button is-danger" href="{{ path('logout') }}">Exit</a>
+                    <a class="navbar-item" href="{{ path('profile') }}">
+                        <h2>Profile</h2>
+                    </a>
+                    <a class="button is-danger" href="{{ path('logout') }}">
+                        Exit
+                    </a>
                 {% else %}
                     <div class="field is-grouped">
                         <div class="control">
-                            <a class="button is-info" href="{{ path('sign-up') }}">Sign up</a>
-                            <a class="button is-primary" href="{{ path('login') }}">Sign in</a>
+                            <a class="button is-info" href="{{ path('sign-up') }}">
+                                Sign up
+                            </a>
+                            <a class="button is-primary" href="{{ path('login') }}">
+                                Sign in
+                            </a>
                         </div>
                     </div>
                 {% endif %}
